# product-composer

./: .flake8  .gitattributes  .gitignore  Makefile  README.rst  pyproject.toml
.github/workflows/: tests.yaml
docs/: build_description.adoc  conf.py  index.rst  productcomposer.adoc  productcomposer.html
examples/: ftp.obsproduct  ftp.productcompose
src/obsproductbuilder/: __init__.py  __main__.py  cli.py
src/obsproductbuilder/api/: __init__.py
src/productcomposer/: __init__.py  __main__.py  __version__.py  cli.py  cliparser.py  config.py  defaults.py  dispatcher.py  rpm.py  solv.py  updateinfo.py
src/productcomposer/api/: parse.py
src/productcomposer/commands/: __init__.py  build.py  verify.py
src/productcomposer/core/: Filter.py  Package.py  PkgSelect.py  PkgSet.py  Pool.py  Updateinfo.py  config.py  logger.py
src/productcomposer/createartifacts/: createagamaiso.py  createappstream.py  createchecksumfile.py  createiso.py  createmediadir.py  createsusedataxml.py  createtree.py  createupdateinfoxml.py
src/productcomposer/parsers/: eulasparser.py  supportstatusparser.py  yamlparser.py
src/productcomposer/utils/: cpeid.py  cryptoutils.py  loggerutils.py  repomdutils.py  report.py  rpmutils.py  runcreaterepo.py  runhelper.py
src/productcomposer/validators/: composeschema.py
src/productcomposer/verifiers/: composeschema.py
src/productcomposer/wrappers/: __init__.py  common.py  createrepo.py  modifyrepo.py
tests/assets/: supportstatus-wrong.txt  supportstatus.txt  updateinfo.xml
tests/assets/eulas/: AdobeICCProfiles.en  deepin-feature-enable.en  eulaTest1.en  eulaTest2.en  eulaTest3.en  steamcmd.en
tests/assets/rpms/: bash-5.2.37-20.1.x86_64.rpm  openSUSE-release-20250305-3407.1.x86_64.rpm
tests/assets/rpms/15.6_oss/aarch64/: glow-1.5.1-lp156.2.3.1.aarch64.rpm  iptraf-ng-1.2.1_1.2.2-bp156.3.6_lp156.4.3.1.aarch64.drpm  perl-Mail-SPF_XS-0.01-lp156.2.3.1.aarch64.rpm
tests/assets/rpms/15.6_oss/noarch/: gtk3-branding-openSUSE-15.0-lp156.4.2.1.noarch.rpm  libgarcon-branding-openSUSE-4.18.0+git4.79f6d44-lp156.2.2.16.noarch.rpm
tests/assets/rpms/15.6_oss/ppc64le/: glow-1.5.1-lp156.2.3.1.ppc64le.rpm  libspf2-2-1.2.11-lp156.2.3.1.ppc64le.rpm
tests/assets/rpms/15.6_oss/s390x/: glow-1.5.1-lp156.2.3.1.s390x.rpm  patterns-base-apparmor-20200505-lp156.17.3.1.s390x.rpm  patterns-base-apparmor-32bit-20200505-lp156.17.3.1.s390x.rpm  upx-5.0.0-lp156.3.3.1.s390x.rpm
tests/assets/rpms/15.6_oss/x86_64/: glow-1.5.1-lp156.2.3.1.x86_64.rpm  iptraf-ng-1.2.1_1.2.2-bp156.3.6_lp156.4.3.1.x86_64.drpm  iptraf-ng-1.2.2-bp156.4.3.1_lp156.4.3.1.x86_64.drpm  libspf2-2-1.2.11-lp156.2.3.1.x86_64.rpm  patterns-base-apparmor-20200505-lp156.17.3.1.x86_64.rpm  patterns-base-apparmor-32bit-20200505-lp156.17.3.1.x86_64.rpm  (+3 more)
tests/assets/tomls/: InvalidBuildOption.productcompose  MissingSchemaVer.productcompose
tests/assets/yamls/: Backports.productcompose  InvalidSchema.productcompose  UnsupportedSchemaVer.productcompose  leap16dvd.productcompose
tests/unit/: test_api.py.disabled  test_cli.py.disabled  test_runcreaterepo.py  test_solv.py
tests/unit/core/: repo156_meta.py  test_logger.py  test_package.py  test_pkgselect.py  test_pool.py  test_updateinfo.py  test_updateinfo.py.disabled
tests/unit/parsers/: test_eulasparser.py  test_supportstatusparser.py  test_yamlparser.py
