[project]
name = "productcomposer"
description = "OBS product image creator"

authors = [
    { name = "Adrian Schröter", email = "adrian@suse.de" },
    { name = "Antonello Tartamo", email = "atartamo@suse.de" },
    { name = "Daniel Mach", email = "daniel.mach@suse.com" },
    { name = "Dirk Müller", email = "dmueller@suse.de" },
    { name = "Michael Schröder", email = "mls@suse.de" },
]
license = "GPL-2.0-or-later"
license-files = ["COPYING"]

requires-python = ">=3.11"
dependencies = [
    "rpm",
    "zstandard",
    "pydantic",
    "pyyaml",
]
dynamic = ["version", "readme"]

[project.urls]
"Homepage" = "https://somewhere"

[project.scripts]
productcomposer = "productcomposer.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1,<8",
    "sphinx>=6.2.1,<7",
    "sphinx_rtd_theme>=1.2.1,<2",
]

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "src/productcomposer/__version__.py"

[tool.setuptools.dynamic]
version = {attr = "productcomposer.__version__"}
readme = {file = ["README.rst"], content-type = "text/x-rst"}

[tool.setuptools.packages.find]
where = ["src", "tests"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests",
]
